--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 
 <body>
 <div class="wrapper">
-    <header class="header">Header Goes Here</header>
-    <nav id="nav">Nav Goes Here</nav>
+    <header class="header">header</header>
+    <nav id="nav">nav</nav>
         <section id="section"  class="floatleft">
-            Section
+            section
                     <article class="article">
-                        Article
-                        <header class="info">H1 H2 H3</header>
-                        <div class="info" id="text"><p>Text</p></div>
+                        article
+                        <header class="info">h1, h2, h3</header>
+                        <div class="info" id="text"><p>p</p></div>
                     </article>
         </section>
-    <aside id="aside">Aside</aside>
+    <aside id="aside">aside</aside>
 
 <!-- <div id="brclear"></div> -->
 <div class="clearboth"></div>
 <!-- <div id="brclear"></div> -->
 
-<footer class="footer">Footer</footer>
+<footer class="footer">footer</footer>
 
 </div> <!-- end of wrapper -->
 
